--- a/about.html
+++ b/about.html
@@ -37,6 +37,8 @@
           </div>
         </div>
       </nav>
+      <img src="images/india.png" alt="Bootstrap" width="400" height="300" style="vertical-align:middle float:right">
+      <p style="vertical-align:middle">The ICC Men's T20 World Cup in 2022 will be the eighth edition in the series. It will be held in Australia from October 16 to November 13, 2022. Originally scheduled to take place in 2020, the International Cricket Council (ICC) declared in July 2020 that the event has been postponed owing to the COVID-19 epidemic. The ICC also stated in August 2020 that Australia will host the revised event in 2022, with the T20 World Cup initially set to take place in India in 2021 but then shifted to the UAE and Oman. The ICC confirmed all of the tournament's matches on January 21, 2022. Hosts Australia is also the reigning world champion.</p>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
