--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="venues.html">Venues</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
