fix: Create a new file for venues and add to navbar #2

--- a/venues.html
+++ b/venues.html
@@ -40,11 +40,103 @@
           </div>
         </div>
       </nav>
-      <img src="images/india.png" alt="Bootstrap" width="300" height="250" align="right" style="padding: 10px;">
-      <h2 align="center" style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">2022 ICC Men's T20 World Cup</h2>
-
-      <h3 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">Venues</h3>
-        <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">On 15 November 2021, the ICC confirmed the venues that will host matches across the tournament. The host cities are <b>Adelaide, Brisbane, Geelong, Hobart, Melbourne, Perth and Sydney</b>.The semi-finals would take place at the <b>Sydney Cricket Ground and the Adelaide Oval</b>, with the final taking place at the <b>Melbourne Cricket Ground</b>.</p>
+      <h2 align="center" style= "padding: 5px;font-size:40px; robotoMono ;margin: 15px 15px 15px 15px;">2022 ICC Men's T20 World Cup Venues</h2>
+        <div style=" display: flex; flex-wrap: wrap; margin: 25px; ">
+        <div>
+          <h4 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">
+          Adelaide Oval
+        </h4>
+        <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">
+          Adelaide Oval <b style="font-size: 150%;">|</b> Capacity:  53,500 <b style="font-size: 150%;">|</b> 1871
+        </p>
+        <img src="images/Adelaide Oval.webp" alt="Bootstrap" width="300" height="250" style=" margin: 20px; border-radius: 10px;">
+        <h5 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">Matches:</h5>
+        <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;"> 
+          6x Group Matches <br>
+          1x Semi Final Match <br>
+        </p>
+      </div>
+        <div>
+          <h4 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">
+            Bellerive-Oval
+          </h4>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">
+            Bellerive-Oval <b style="font-size: 150%;">|</b> Capacity:  36,000 <b style="font-size: 150%;">|</b> 2005
+          </p>
+          <img src="images/Bellerive-Oval.webp" alt="Bootstrap" width="300" height="250" style=" margin: 20px; border-radius: 10px;">
+          <h5 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">Matches:</h5>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;"> 
+            9x Group Matches <br>
+          </p>
+        </div>
+        <div>
+          <h4 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">
+            Kardinia Park
+          </h4>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">
+            Kardinia Park <b style="font-size: 150%;">|</b> Capacity:  26,000 <b style="font-size: 150%;">|</b> 2016
+          </p>
+          <img src="images/Kardinia Park.webp" alt="Bootstrap" width="300" height="250" style=" margin: 20px; border-radius: 10px;">
+          <h5 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">Matches:</h5>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;"> 
+            6x Group Matches <br>
+          </p>
+        </div>
+        <div>
+          <h4 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">
+            MCG
+          </h4>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">
+            MCG <b style="font-size: 150%;">|</b> Capacity:  100,024 <b style="font-size: 150%;">|</b> 1853
+          </p>
+          <img src="images/MCG.webp" alt="Bootstrap" width="300" height="250" style=" margin: 20px; border-radius: 10px;">
+          <h5 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">Matches:</h5>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;"> 
+            6x Group Matches <br>
+            1x Final Match <br>
+          </p>
+        </div>
+        <div>
+          <h4 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">
+            Perth Stadium
+          </h4>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">
+            Perth Stadium <b style="font-size: 150%;">|</b> Capacity:   61,266 <b style="font-size: 150%;">|</b> 2017
+          </p>
+          <img src="images/Perth Stadium.webp" alt="Bootstrap" width="300" height="250" style=" margin: 20px; border-radius: 10px;">
+          <h5 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">Matches:</h5>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;"> 
+            5x Group Matches <br>
+          </p>
+        </div>
+        <div>
+          <h4 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">
+            SCG
+          </h4>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">
+            SCG <b style="font-size: 150%;">|</b> Capacity:  48,000 <b style="font-size: 150%;">|</b> 1848
+          </p>
+          <img src="images/SCG.webp" alt="Bootstrap" width="300" height="250" style=" margin: 20px; border-radius: 10px;">
+          <h5 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">Matches:</h5>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;"> 
+            6x Group Matches <br>
+            1x Semi Final Match <br>
+          </p>
+        </div>
+        <div>
+          <h4 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">
+            The Gabba
+          </h4>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">
+            The Gabba <b style="font-size: 150%;">|</b> Capacity:  36,000 <b style="font-size: 150%;">|</b> 1895
+          </p>
+          <img src="images/The Gabba.webp" alt="Bootstrap" width="300" height="250" style=" margin: 20px; border-radius: 10px;">
+          <h5 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;">Matches:</h5>
+          <p style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 25px;"> 
+            4x Group Matches <br>
+          </p>
+        </div>
+      </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
