--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="venues.html">Venues</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="team.html">Venues</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
