fix: Create a page teams #5

--- a/about.html
+++ b/about.html
@@ -30,6 +30,9 @@
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="venues.html">Venues</a>
               </li>
             </ul>
