--- a/venues.html
+++ b/venues.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
   </head>
-  <body ">
+  <body >
     <section id="nav">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
@@ -27,10 +27,13 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" aria-current="page" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="venues.html">Venues</a>
+                <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="venues.html">Venues</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -40,7 +43,7 @@
           </div>
         </div>
       </nav>
-      <h2 align="center" style= "padding: 5px;font-size:40px; robotoMono ;margin: 15px 15px 15px 15px;">2022 ICC Men's T20 World Cup Venues</h2>
+      <h2 align="center" style= "padding: 5px;font-size:40px; font:robotoMono ;margin: 15px 15px 15px 15px;">2022 ICC Men's T20 World Cup Venues</h2>
         <div style=" display: flex; flex-wrap: wrap; margin: 25px; ">
         <div>
           <h4 style= "padding: 5px;font-family: robotoMono ;margin: 15px 15px 15px 15px;">
