fix:Update the About page#7

--- a/about.html
+++ b/about.html
@@ -45,10 +45,10 @@
       </nav> 
       
       <div>
-        <div><img src="images/1.jpg" alt="Bootstrap" width="480" height="750" align="right" style="padding: 10px; 
+        <div><img src="images/left.jpg" alt="Bootstrap" width="480" height="750" align="right" style="padding: 10px; 
         margin: 55px 15px 15px 15px;">
         </div>
-        <div><img src="images/2.jpg" alt="Bootstrap" width="480" height="750" align="left" style="padding: 10px;
+        <div><img src="images/right.jpg" alt="Bootstrap" width="480" height="750" align="left" style="padding: 10px;
           margin: 55px 15px 15px 15px;">
       </div>
       <div style= "padding: 5px;font-family: robotoMono; font-size: larger; margin: 25px 500px 45px 500px;">
